--- a/Games.html
+++ b/Games.html
@@ -48,7 +48,7 @@ h2 {
   <a href="https://sosobo-code.github.io/Games.html">Game</a>
   <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
   <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/Interactions.html">Interactive entertainment</a>
+  <a href="a">Interactive entertainment</a>
   <a href="https://www.youtube.com/channel/UCdlU_XHy-cXDss_qD76NaeQ">hmm</a>
 </div>
 
