--- a/Birch 2.html
+++ b/Birch 2.html
@@ -90,6 +90,16 @@ div {
         Thats what makes them such good firestarters.<br/>
         The trees flammable bark is caused by dry betulinic acid which can explode if on fire.</p>
         <button onclick="window.location.href = 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Birch_bark_front_rear.jpg/255px-Birch_bark_front_rear.jpg';">Click Here to get a magnified view of the bark</button>
+        </div>
+        <marquee scrollamount="8">Why is the birch white heres why</marquee>
+<div class="center">
+<img src="https://images.unsplash.com/photo-1509420316987-d27b02f81864?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" align="right" height="100px"
+width="50px" alt="whitetreethatisbirch">
+<p>The Reason the birch tree is white is because it reflects most of the suns rays.<br/>
+  Dark trees absorb light while white trees reflect it.<br/>
+  
+
+</div>
 
     </div>
 </body>
