--- a/Birch 2.html
+++ b/Birch 2.html
@@ -59,7 +59,7 @@ div {
 
 <div class="topnav">
   <a class="active" href="">Pages:</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/index.html">Back to home</a>
+  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Arrshans%20homepage.html">Back to home</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Birch 2.html">Page 1</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/Links.html">Links</a>
 </div>
@@ -77,7 +77,7 @@ div {
   it is known for being good at making things look pretty.<br/>
   Birch is good for designing because of their paperlike bark and their beautiful natural designs.</p>
 </div>
-<marquee>Birch tree is a very flammable tree the wood of the tree can catch fire even when its wet! you will find out more about this in this paragraph.</marquee>
+<marquee scrollamount="9">Birch tree is a very flammable tree the wood of the tree can catch fire even when its wet! you will find out more about this in this paragraph.</marquee>
 <div class="center">
   <p>The Birch tree has a very flammable bark and wood the bark and the wood are both waterproof.<br/>
     Thats what makes them such good firestarters.</p>
@@ -90,17 +90,17 @@ div {
         Thats what makes them such good firestarters.<br/>
         The trees flammable bark is caused by dry betulinic acid which can explode if on fire.</p>
         <button onclick="window.location.href = 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Birch_bark_front_rear.jpg/255px-Birch_bark_front_rear.jpg';">Click Here to get a magnified view of the bark</button>
-        </div>
-        <marquee scrollamount="8">Why is the birch white heres why</marquee>
+</div>
+<marquee scrollamount="8">Why is the birch white heres why</marquee>
 <div class="center">
-<img src="https://images.unsplash.com/photo-1509420316987-d27b02f81864?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" align="right" height="100px"
-width="50px" alt="whitetreethatisbirch">
+<img src="https://images.unsplash.com/photo-1509420316987-d27b02f81864?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" align="right" height="70px"
+width=50px" alt="whitetreethatisbirch">
 <p>The Reason the birch tree is white is because it reflects most of the suns rays.<br/>
-  Dark trees absorb light while white trees reflect it.<br/>
-  
+  Dark trees absorb light while white trees reflect it.</p>
+  <button onclick="window.location.href = 'https://images.unsplash.com/photo-1509420316987-d27b02f81864?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80';">Click Here to get a magnified view of the tree</button>
+  </div>
+<marquee scrollamount="10">The birch tree can live for 30 to 300 year depending on temperature and climate learn more below</marquee>  
 
 </div>
-
-    </div>
 </body>
 </html>
