--- a/Birch 2.html
+++ b/Birch 2.html
@@ -100,7 +100,15 @@ width=50px" alt="whitetreethatisbirch">
   <button onclick="window.location.href = 'https://images.unsplash.com/photo-1509420316987-d27b02f81864?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80';">Click Here to get a magnified view of the tree</button>
   </div>
 <marquee scrollamount="10">The birch tree can live for 30 to 300 year depending on temperature and climate learn more below</marquee>  
-
+<div class="center">
+  <img src="https://i.pinimg.com/originals/eb/f5/c3/ebf5c3c82a9105d0c737df8c3e8e5476.jpg" align="right" height="70px"
+  width="50px" alt="clocktreebirchtreewow">
+  <p>The Paper birch can naturally live to at least 140 years,<br/>
+    But if tree is cultivated it can only live for atleast 30 to 40 years old.<br/> 
+    (cultivated means has not been grown naturally it has been planted my man)</p>
+    <button onclick="window.location.href = 'https://i.pinimg.com/originals/eb/f5/c3/ebf5c3c82a9105d0c737df8c3e8e5476.jpg';">Click Here to get a magnified view of the tree</button>
+    
+</div>
 </div>
 </body>
 </html>
