--- a/Birch 2.html
+++ b/Birch 2.html
@@ -59,9 +59,9 @@ div {
 
 <div class="topnav">
   <a class="active" href="">Pages:</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Arrshans%20homepage.html">Back to home</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Birch 2.html">Page 1</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/Links.html">Links</a>
+  <a href="https://sosobo-code.github.io/index.html">Back to home</a>
+  <a href="https://sosobo-code.github.io/Birch%202.html">Page 1</a>
+  <a href="https://sosobo-code.github.io/Links.html">Links</a>
 </div>
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
