--- a/Birch 2.html
+++ b/Birch 2.html
@@ -107,8 +107,7 @@ width=50px" alt="whitetreethatisbirch">
     But if tree is cultivated it can only live for atleast 30 to 40 years old.<br/> 
     (cultivated means has not been grown naturally it has been planted my man)</p>
     <button onclick="window.location.href = 'https://i.pinimg.com/originals/eb/f5/c3/ebf5c3c82a9105d0c737df8c3e8e5476.jpg';">Click Here to get a magnified view of the tree</button>
-    
-</div>
-</div>
+    </div>
+<marquee scrollamount="11">How much rain do paper birch need to survive?</marquee>
 </body>
 </html>
