--- a/Birch 2.html
+++ b/Birch 2.html
@@ -65,8 +65,10 @@ div {
 </div>
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
-  
   <h2>What is birch?</h2>
+  <div style="text-align: center;">
+    <p>20 cookies are used in this page</p>
+       </div>
   <div style="center">
   <img src="https://shop.arborday.org/data/default/images/catalog/600/Turnkey/1/2-791.jpg" height="300px"
   width="300px" alt="Birchtree">
