--- a/Birch 2.html
+++ b/Birch 2.html
@@ -111,5 +111,9 @@ width=50px" alt="whitetreethatisbirch">
     <button onclick="window.location.href = 'https://i.pinimg.com/originals/eb/f5/c3/ebf5c3c82a9105d0c737df8c3e8e5476.jpg';">Click Here to get a magnified view of the tree</button>
     </div>
 <marquee scrollamount="11">How much rain do paper birch need to survive?</marquee>
+<div class="center">
+  <p>Paper brich naturally require at least 2-3 hours of water to survive this is about 8-18 inches of water.<br/>
+    Cultivated birch is the same 2-3 hours of watering the roots (not at one time) and 8-18 inches of water</p>
+</div>
 </body>
 </html>
