--- a/Birch 2.html
+++ b/Birch 2.html
@@ -105,14 +105,21 @@ width=50px" alt="whitetreethatisbirch">
   <img src="https://i.pinimg.com/originals/eb/f5/c3/ebf5c3c82a9105d0c737df8c3e8e5476.jpg" align="right" height="70px"
   width="50px" alt="clocktreebirchtreewow">
   <p>The Paper birch can naturally live to at least 140 years,<br/>
-    But if tree is cultivated it can only live for atleast 30 to 40 years old.<br/> 
+    But if tree is cultivated it can only live for 30 to 40 years long.<br/> 
     (cultivated means has not been grown naturally it has been planted my man)</p>
     <button onclick="window.location.href = 'https://i.pinimg.com/originals/eb/f5/c3/ebf5c3c82a9105d0c737df8c3e8e5476.jpg';">Click Here to get a magnified view of the tree</button>
     </div>
 <marquee scrollamount="11">How much rain do paper birch need to survive?</marquee>
 <div class="center">
-  <p>Paper brich naturally require at least 2-3 hours of water to survive this is about 8-18 inches of water.<br/>
+<p>Paper brich naturally require at least 2-3 hours of watering to survive this is about 8-18 inches of water.<br/>
     Cultivated birch is the same 2-3 hours of watering the roots (not at one time) and 8-18 inches of water</p>
+</div>
+    <marquee scrollamount="11">Birch are great trees but they have some downsides.</marquee>
+<div class="center">
+<p>The birch tree is a very beautiful tree but its roots grow close the the surface.<br/>
+  This means that it can damage footpaths and ruin the look of your land. It can also<br/>
+  be unsafe the roots can grow too high and you could trip over, also it is not a good idea<br/>
+  to grow paper birch close to your house as its roots can damage your house.</p>
 </div>
 </body>
 </html>
