--- a/Birch 2.html
+++ b/Birch 2.html
@@ -116,6 +116,8 @@ width=50px" alt="whitetreethatisbirch">
 </div>
     <marquee scrollamount="11">Birch are great trees but they have some downsides.</marquee>
 <div class="center">
+  <img src="https://www.totallandscapecare.com/landscaping/tree-sidewalk-conflicts/" align="right" height="70px"
+  width="50px" alt="dflfdkpo[lps,kgo">
 <p>The birch tree is a very beautiful tree but its roots grow close the the surface.<br/>
   This means that it can damage footpaths and ruin the look of your land. It can also<br/>
   be unsafe the roots can grow too high and you could trip over, also it is not a good idea<br/>
