--- a/Birch 2.html
+++ b/Birch 2.html
@@ -147,7 +147,7 @@ The Right answers is
 
 <div id="category1">
 
-<p><strong>Question 1:</strong> The correct answer is the <strong>Option 1</strong>.</p>
+<p><strong>Question 1:</strong> The correct answer is <strong>The bark</strong>.</p>
 
 </div>
 </body>
