--- a/Birch 2.html
+++ b/Birch 2.html
@@ -133,9 +133,9 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q1" value="b" id="q1b"><label for="q1b">2. The leaves</label><br/>
 
-<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">3. </label><br/>
+<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">3. The roots </label><br/>
 
-<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Option 4</label><br/>
+<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
 
 </ul>
 
