--- a/Birch 2.html
+++ b/Birch 2.html
@@ -138,11 +138,14 @@ width=50px" alt="whitetreethatisbirch">
 <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
 
 </ul>
-<p class="question">2. How long does birch live for</p>
-
-<ul class="answers">
-
-<input type="radio" name="q2" value="a" id="q1a"><label for="q1a">1. 200 years</label><br/>
+</div>
+</body>
+</html>
+<html>
+  <body>
+    <p class="question">2. What makes birch so flammable</p>
+    
+    <input type="radio" name="q2" value="a" id="q1a"><label for="q1a">1. 200 years</label><br/>
 
 <input type="radio" name="q2" value="b" id="q1b"><label for="q1b">2. 300 years</label><br/>
 
@@ -153,6 +156,5 @@ width=50px" alt="whitetreethatisbirch">
 <input type="radio" name="q2" value="e" id="q1e"><label for="q1e">both 30 to 300 years</label><br/>
 
 <input type="radio" name="q2" value="f" id="q1f"><label for="q1f">both 40 to 200 years</label><br/>
-</div>
-</body>
+  </body>
 </html>
