--- a/Birch 2.html
+++ b/Birch 2.html
@@ -136,7 +136,6 @@ width=50px" alt="whitetreethatisbirch">
 <input type="radio" name="q1" value="c" id="q1c"><label for="q1c">3. The roots </label><br/>
 
 <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
-
 </ul>
 </div>
 </body>
@@ -156,5 +155,18 @@ width=50px" alt="whitetreethatisbirch">
 <input type="radio" name="q2" value="e" id="q1e"><label for="q1e">both 30 to 300 years</label><br/>
 
 <input type="radio" name="q2" value="f" id="q1f"><label for="q1f">both 40 to 200 years</label><br/>
+  </body>
+</html>
+<html>
+  <body>
+    <p class="question">2. Why is paper birch white</p>
+    
+    <input type="radio" name="q2" value="a" id="q1a"><label for="q1a">1. the white from the inside was pushed onto the outside</label><br/>
+
+<input type="radio" name="q2" value="b" id="q1b"><label for="q1b">2. Birch reflects the suns rays</label><br/>
+
+<input type="radio" name="q2" value="c" id="q1c"><label for="q1c">3. Birch absorbs the suns rays </label><br/>
+
+<input type="radio" name="q2" value="d" id="q1d"><label for="q1d">4. it is not white</label><br/>
   </body>
 </html>
