--- a/Birch 2.html
+++ b/Birch 2.html
@@ -150,11 +150,11 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q2" value="c" id="q1c"><label for="q1c">3. 40 years </label><br/>
 
-<input type="radio" name="q2" value="d" id="q1d"><label for="q1d">30 years</label><br/>
+<input type="radio" name="q2" value="d" id="q1d"><label for="q1d"> 4.30 years</label><br/>
 
-<input type="radio" name="q2" value="e" id="q1e"><label for="q1e">both 30 to 300 years</label><br/>
+<input type="radio" name="q2" value="e" id="q1e"><label for="q1e">5.both 30 to 300 years</label><br/>
 
-<input type="radio" name="q2" value="f" id="q1f"><label for="q1f">both 40 to 200 years</label><br/>
+<input type="radio" name="q2" value="f" id="q1f"><label for="q1f">6.both 40 to 200 years</label><br/>
   </body>
 </html>
 <html>
