--- a/Birch 2.html
+++ b/Birch 2.html
@@ -155,6 +155,8 @@ width=50px" alt="whitetreethatisbirch">
 <input type="radio" name="q2" value="e" id="q1e"><label for="q1e">5.both 30 to 300 years</label><br/>
 
 <input type="radio" name="q2" value="f" id="q1f"><label for="q1f">6.both 40 to 200 years</label><br/>
+  </ul>
+</div>
   </body>
 </html>
 <html>
