--- a/Birch 2.html
+++ b/Birch 2.html
@@ -144,31 +144,32 @@ width=50px" alt="whitetreethatisbirch">
   <body>
     <p class="question">2. What makes birch so flammable</p>
     
-    <input type="radio" name="q2" value="a" id="q1a"><label for="q1a">1. 200 years</label><br/>
+    <input type="radio" name="q2" value="a" id="q2a"><label for="q1a">1. 200 years</label><br/>
 
-<input type="radio" name="q2" value="b" id="q1b"><label for="q1b">2. 300 years</label><br/>
+<input type="radio" name="q2" value="b" id="q2b"><label for="q1b">2. 300 years</label><br/>
 
-<input type="radio" name="q2" value="c" id="q1c"><label for="q1c">3. 40 years </label><br/>
+<input type="radio" name="q2" value="c" id="q2c"><label for="q1c">3. 40 years </label><br/>
 
-<input type="radio" name="q2" value="d" id="q1d"><label for="q1d"> 4.30 years</label><br/>
+<input type="radio" name="q2" value="d" id="q2d"><label for="q1d">4. 30 years</label><br/>
 
-<input type="radio" name="q2" value="e" id="q1e"><label for="q1e">5.both 30 to 300 years</label><br/>
+<input type="radio" name="q2" value="e" id="q2e"><label for="q1e">5. both 30 to 300 years</label><br/>
 
-<input type="radio" name="q2" value="f" id="q1f"><label for="q1f">6.both 40 to 200 years</label><br/>
+<input type="radio" name="q2" value="f" id="q2f"><label for="q1f">6. both 40 to 200 years</label><br/>
   </ul>
 </div>
   </body>
 </html>
+
 <html>
   <body>
     <p class="question">2. Why is paper birch white</p>
     
-    <input type="radio" name="q2" value="a" id="q1a"><label for="q1a">1. the white from the inside was pushed onto the outside</label><br/>
+    <input type="radio" name="q3" value="a" id="q3a"><label for="q1a">1. the white from the inside was pushed onto the outside</label><br/>
 
-<input type="radio" name="q2" value="b" id="q1b"><label for="q1b">2. Birch reflects the suns rays</label><br/>
+<input type="radio" name="q3" value="b" id="q3b"><label for="q1b">2. Birch reflects the suns rays</label><br/>
 
-<input type="radio" name="q2" value="c" id="q1c"><label for="q1c">3. Birch absorbs the suns rays </label><br/>
+<input type="radio" name="q3" value="c" id="q3c"><label for="q1c">3. Birch absorbs the suns rays </label><br/>
 
-<input type="radio" name="q2" value="d" id="q1d"><label for="q1d">4. it is not white</label><br/>
+<input type="radio" name="q3" value="d" id="q3d"><label for="q1d">4. it is not white</label><br/>
   </body>
 </html>
