--- a/Birch 2.html
+++ b/Birch 2.html
@@ -141,18 +141,14 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
 </ul>
-<p><button onclick="myFunction()">Click Me</button></p>
+<p><button onclick="myFunction()">Click here for answer</button></p>
 
 <div id="myDIV">Hello</div>
 
 <script>
 function myFunction() {
   var x = document.getElementById("myDIV");
-  if (x.innerHTML === "Hello") {
     x.innerHTML = "Swapped text!";
-  } else {
-    x.innerHTML = "Hello";
-  }
 }
 </script>
 </div>
