--- a/Birch 2.html
+++ b/Birch 2.html
@@ -143,12 +143,10 @@ width=50px" alt="whitetreethatisbirch">
 </ul>
 <p><button onclick="myFunction()">Click here for answer</button></p>
 
-<div id="myDIV">Hello</div>
-
 <script>
 function myFunction() {
   var x = document.getElementById("myDIV");
-    x.innerHTML = "Swapped text!";
+    x.innerHTML = "The answer is bark";
 }
 </script>
 </div>
