--- a/Birch 2.html
+++ b/Birch 2.html
@@ -141,12 +141,16 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
 </ul>
-<p><button onclick="myFunction()">Click here for answer</button></p>
+<p><button onclick="myFunction()">click</button></p>
+
+<div id="myDIV">Hello</div>
 
 <script>
 function myFunction() {
   var x = document.getElementById("myDIV");
-    x.innerHTML = "The answer is bark";
+  if (x.innerHTML === "please press button for answer") {
+    x.innerHTML = "The bark";
+  }
 }
 </script>
 </div>
