--- a/Birch 2.html
+++ b/Birch 2.html
@@ -150,6 +150,8 @@ function myFunction() {
   var x = document.getElementById("myDIV");
   if (x.innerHTML === "please press button for answer") {
     x.innerHTML = "The bark";
+  } else {
+    x.innerHTML = "Please pressbutton for answer";
   }
 }
 </script>
