--- a/Birch 2.html
+++ b/Birch 2.html
@@ -143,7 +143,7 @@ width=50px" alt="whitetreethatisbirch">
 </ul>
 <p><button onclick="myFunction()">click</button></p>
 
-<div id="myDIV">Hello</div>
+<div id="myDIV">Click here for</div>
 
 <script>
 function myFunction() {
