--- a/Birch 2.html
+++ b/Birch 2.html
@@ -141,7 +141,7 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
 </ul>
-<p><button onclick="myFunction()">Click Me</button></p>
+<p><button onclick="myFunction()">click</button></p>
 
 <div id="myDIV">Show answer</div>
 
