--- a/Birch 2.html
+++ b/Birch 2.html
@@ -176,11 +176,11 @@ function myFunction() {
   </ul>
   <p><button onclick="myFunction()">click for answer</button></p>
 
-<div id="myDIV">-----------</div>
+<div id="myDIV2">-----------</div>
 
 <script>
 function myFunction() {
-  var x = document.getElementById("myDIV");
+  var x = document.getElementById("myDIV2");
   if (x.innerHTML === "-----------") {
     x.innerHTML = "5. both 30 to 300 years";
   } else {
