--- a/Birch 2.html
+++ b/Birch 2.html
@@ -141,20 +141,6 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
 </ul>
-<p><button onclick="myFunction()">click for answer</button></p>
-
-<div id="myDIV">-----------</div>
-
-<script>
-function myFunction() {
-  var x = document.getElementById("myDIV");
-  if (x.innerHTML === "-----------") {
-    x.innerHTML = "1. The bark";
-  } else {
-    x.innerHTML = "-----------";
-  }
-}
-</script>
 </div>
   </body>
 </html>
@@ -174,24 +160,23 @@ function myFunction() {
 
 <input type="radio" name="q2" value="f" id="q2f"><label for="q1f">6. both 40 to 200 years</label><br/>
   </ul>
-  <p><button onclick="myFunction()">click for answer</button></p>
-
-<div id="myDIV2">-----------</div>
-
-<script>
-function myFunction() {
-  var x = document.getElementById("myDIV2");
-  if (x.innerHTML === "-----------") {
-    x.innerHTML = "5. both 30 to 300 years";
-  } else {
-    x.innerHTML = "-----------";
-  }
-}
-</script>
 </div>
   </body>
 </html>
 
+<html>
+  <body>
+    <p class="question">3. Why is paper birch white</p>
+    
+    <input type="radio" name="q3" value="a" id="q3a"><label for="q1a">1. the white from the inside was pushed onto the outside</label><br/>
+
+<input type="radio" name="q3" value="b" id="q3b"><label for="q1b">2. Birch reflects the suns rays</label><br/>
+
+<input type="radio" name="q3" value="c" id="q3c"><label for="q1c">3. Birch absorbs the suns rays </label><br/>
+
+<input type="radio" name="q3" value="d" id="q3d"><label for="q1d">4. it is not white</label><br/>
+  </body>
+</html>
 <html>
   <body>
     <p class="question">3. Why is paper birch white</p>
