--- a/Birch 2.html
+++ b/Birch 2.html
@@ -176,6 +176,7 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q3" value="d" id="q3d"><label for="q1d">4. it is not white</label><br/>
   </ul>
+</div>
   </body>
 </html>
 <html>
