--- a/Birch 2.html
+++ b/Birch 2.html
@@ -181,14 +181,18 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
   <body>
-    <p class="question">3. Why is paper birch white</p>
+    <p class="question">3. How long can birch live cultivated </p>
     
-    <input type="radio" name="q4" value="a" id="q4a"><label for="q1a">1. the white from the inside was pushed onto the outside</label><br/>
+    <input type="radio" name="q4" value="a" id="q4a"><label for="q1a">1. 30 to 300 years</label><br/>
 
-<input type="radio" name="q4" value="b" id="q4b"><label for="q1b">2. Birch reflects the suns rays</label><br/>
+<input type="radio" name="q4" value="b" id="q4b"><label for="q1b">2. 30 years</label><br/>
 
-<input type="radio" name="q4" value="c" id="q4c"><label for="q1c">3. Birch absorbs the suns rays </label><br/>
+<input type="radio" name="q4" value="c" id="q4c"><label for="q1c">3. 3 to 5 years old </label><br/>
 
-<input type="radio" name="q4" value="d" id="q4d"><label for="q1d">4. it is not white</label><br/>
+<input type="radio" name="q4" value="d" id="q4d"><label for="q1d">4. 400 years</label><br/>
+
+<input type="radio" name="q4" value="e" id="q4d"><label for="q1d">5. 30 to 40 years old </label><br/>
+
+<input type="radio" name="q4" value="e" id="q4d"><label for="q1d">6. 40 to 50 years old </label><br/>
   </body>
 </html>
