--- a/Birch 2.html
+++ b/Birch 2.html
@@ -102,7 +102,7 @@ width=50px" alt="whitetreethatisbirch">
   </div>
 <marquee scrollamount="10">The birch tree can live for 30 to 300 years depending on temperature and climate learn more below</marquee>  
 <div class="center">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvstbni5TwTxFlCv0bJuzPJf7SIZDfccmg8gu-DaZGcCBOpl0-&usqp=CAU"
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvstbni5TwTxFlCv0bJuzPJf7SIZDfccmg8gu-DaZGcCBOpl0-&usqp=CAU" align="right" height="70px"
   width="50px" alt="broken">
   <p>The Paper birch can naturally live to at least 140 years,<br/>
     But if tree is cultivated it can only live for 30 to 40 years long.<br/> 
