--- a/Birch 2.html
+++ b/Birch 2.html
@@ -62,7 +62,24 @@ div {
   <a href="https://sosobo-code.github.io/index.html">Back to home</a>
   <a href="https://sosobo-code.github.io/Birch%202.html">Page 1</a>
   <a href="https://sosobo-code.github.io/Links.html">Links</a>
-</div>
+  <a href="#down">to the quiz</a>
+  <div id="down">
+  </div>
+  <script>
+    html {
+  scroll-behavior: smooth;
+ }
+ 
+ a {
+  text-decoration: none;
+  color: black;
+ } 
+ 
+ #down {
+  margin-top: 100%;
+  padding-bottom: 25%;
+ } 
+  </script>
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
   <h2>What is birch?</h2>
