--- a/Birch 2.html
+++ b/Birch 2.html
@@ -62,24 +62,8 @@ div {
   <a href="https://sosobo-code.github.io/index.html">Back to home</a>
   <a href="https://sosobo-code.github.io/Birch%202.html">Page 1</a>
   <a href="https://sosobo-code.github.io/Links.html">Links</a>
-  <a href="#down">to the quiz</a>
-  <div id="down">
-  </div>
-  <script>
-    html {
-  scroll-behavior: smooth;
- }
- 
- a {
-  text-decoration: none;
-  color: black;
- } 
- 
- #down {
-  margin-top: 100%;
-  padding-bottom: 25%;
- } 
-  </script>
+  <a href="#middle">Go To Middle</a>
+</div>
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
   <h2>What is birch?</h2>
