--- a/Birch 2.html
+++ b/Birch 2.html
@@ -139,7 +139,7 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q1" value="c" id="q1c"><label for="q1c">3. The roots </label><br/>
 
-<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">none are correct</label><br/>
+<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">4. none are correct</label><br/>
 </ul>
 </div>
   </body>
@@ -181,7 +181,7 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
   <body>
-    <p class="question">3. How long can birch live cultivated </p>
+    <p class="question">4. How long can birch live cultivated </p>
     
     <input type="radio" name="q4" value="a" id="q4a"><label for="q1a">1. 30 to 300 years</label><br/>
 
