--- a/Birch 2.html
+++ b/Birch 2.html
@@ -194,5 +194,24 @@ width=50px" alt="whitetreethatisbirch">
 <input type="radio" name="q4" value="e" id="q4d"><label for="q1d">5. 30 to 40 years old </label><br/>
 
 <input type="radio" name="q4" value="e" id="q4d"><label for="q1d">6. 40 to 50 years old </label><br/>
+  </ul>
+</div>
   </body>
+</html>
+<html>
+<body>
+  <p class="question">5. How long can birch live cultivated </p>
+    
+  <input type="radio" name="q5" value="a" id="q5a"><label for="q1a">1. 30 to 300 years</label><br/>
+
+<input type="radio" name="q5" value="b" id="q5b"><label for="q1b">2. 30 years</label><br/>
+
+<input type="radio" name="q5" value="c" id="q5c"><label for="q1c">3. 3 to 5 years old </label><br/>
+
+<input type="radio" name="q5" value="d" id="q5d"><label for="q1d">4. 400 years</label><br/>
+
+<input type="radio" name="q5" value="e" id="q5d"><label for="q1d">5. 30 to 40 years old </label><br/>
+
+<input type="radio" name="q54" value="e" id="q5d"><label for="q1d">6. 40 to 50 years old </label><br/>
+</body>
 </html>
