--- a/Birch 2.html
+++ b/Birch 2.html
@@ -213,5 +213,21 @@ width=50px" alt="whitetreethatisbirch">
 <input type="radio" name="q5" value="e" id="q5d"><label for="q1d">5. 30 to 40 years old </label><br/>
 
 <input type="radio" name="q54" value="e" id="q5d"><label for="q1d">6. 40 to 50 years old </label><br/>
+</ul>
+</div>
+<p><button onclick="myFunction()">Click here for answers</button></p>
+
+<div id="myDIV">. . . . .</div>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myDIV");
+  if (x.innerHTML === ". . . . .") {
+    x.innerHTML = "The bark, both 30 to 300, reflects the suns rays, 30 to 40 years, ..";
+  } else {
+    x.innerHTML = ". . . . . ";
+  }
+}
+</script>
 </body>
 </html>
