--- a/Birch 2.html
+++ b/Birch 2.html
@@ -200,19 +200,19 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
 <body>
-  <p class="question">5. How long can birch live cultivated </p>
+  <p class="question">5. What is the worst thing birch can do</p>
     
-  <input type="radio" name="q5" value="a" id="q5a"><label for="q1a">1. 30 to 300 years</label><br/>
+  <input type="radio" name="q5" value="a" id="q5a"><label for="q1a">1. kill birds to the touch </label><br/>
 
-<input type="radio" name="q5" value="b" id="q5b"><label for="q1b">2. 30 years</label><br/>
+<input type="radio" name="q5" value="b" id="q5b"><label for="q1b">2. die randomly </label><br/>
 
-<input type="radio" name="q5" value="c" id="q5c"><label for="q1c">3. 3 to 5 years old </label><br/>
+<input type="radio" name="q5" value="c" id="q5c"><label for="q1c">3. Ruin land </label><br/>
 
-<input type="radio" name="q5" value="d" id="q5d"><label for="q1d">4. 400 years</label><br/>
+<input type="radio" name="q5" value="d" id="q5d"><label for="q1d">4. Kill crops </label><br/>
 
-<input type="radio" name="q5" value="e" id="q5d"><label for="q1d">5. 30 to 40 years old </label><br/>
+<input type="radio" name="q5" value="e" id="q5d"><label for="q1d">5. grow too big  </label><br/>
 
-<input type="radio" name="q54" value="e" id="q5d"><label for="q1d">6. 40 to 50 years old </label><br/>
+<input type="radio" name="q54" value="e" id="q5d"><label for="q1d">6. not grow </label><br/>
 </ul>
 </div>
 <p><button onclick="myFunction()">Click here for answers</button></p>
@@ -223,7 +223,7 @@ width=50px" alt="whitetreethatisbirch">
 function myFunction() {
   var x = document.getElementById("myDIV");
   if (x.innerHTML === ". . . . .") {
-    x.innerHTML = "The bark, both 30 to 300, reflects the suns rays, 30 to 40 years, ..";
+    x.innerHTML = "The bark, both 30 to 300, reflects the suns rays, 30 to 40 years, ruin land.";
   }
 }
 </script>
