--- a/Birch 2.html
+++ b/Birch 2.html
@@ -148,7 +148,9 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
   <body>
+    <div class="center">
    <p class="question">2. What makes birch so flammable</p>
+  </div>
 
     <ul class="answers">
 
@@ -172,8 +174,9 @@ width=50px" alt="whitetreethatisbirch">
 
 <html>
   <body>
+    <div class="center">
     <p class="question">3. Why is paper birch white</p>
-
+      </div>
     <ul class="answers">
 
       <div class="center">
@@ -191,8 +194,9 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
   <body>
+    <div class="center">
     <p class="question">4. How long can birch live cultivated </p>
-
+</div>
     <ul class="answers">
 
       <div class="center">
@@ -214,8 +218,9 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
 <body>
+  <div class="center">
   <p class="question">5. What is the worst thing birch can do</p>
-
+</div>
   <ul class="answers">
 
     <div class="center">
