--- a/Birch 2.html
+++ b/Birch 2.html
@@ -129,8 +129,9 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
   <body>
+    <div class="center">
     <p class="question">1. What makes birch so flammable</p>
-
+</div>
 <ul class="answers">
 
 <div class="center">
