--- a/Birch 2.html
+++ b/Birch 2.html
@@ -128,6 +128,14 @@ width=50px" alt="whitetreethatisbirch">
 </body>
 </html>
 <html>
+  <head>
+    <style>
+      div {
+        border-style: solid;
+  border-color: red;
+      }
+    </style>
+  </head>
   <body>
     <div class="center">
     <p class="question">1. What makes birch so flammable</p>
