--- a/Birch 2.html
+++ b/Birch 2.html
@@ -129,20 +129,11 @@ width=50px" alt="whitetreethatisbirch">
 </html>
 <html>
   <head>
-    <style>
-      div {
-        border-style: solid;
-  border-color: red;
-      }
-    </style>
-  </head>
   <body>
     <div class="center">
     <p class="question">1. What makes birch so flammable</p>
 </div>
 <ul class="answers">
-
-<div class="center">
 
 <input type="radio" name="q1" value="a" id="q1a"><label for="q1a">1. The bark</label><br/>
 
@@ -150,7 +141,7 @@ width=50px" alt="whitetreethatisbirch">
 
 <input type="radio" name="q1" value="c" id="q1c"><label for="q1c">3. The roots </label><br/>
 
-<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">4. none are correct</label><br/>
+<input type="radio" name="q1" value="d" id="q1d"><label for="q1dgi">4. none are correct</label><br/>
 </ul>
 </div>
   </body>
@@ -162,8 +153,6 @@ width=50px" alt="whitetreethatisbirch">
   </div>
 
     <ul class="answers">
-
-      <div class="center">
     
     <input type="radio" name="q2" value="a" id="q2a"><label for="q1a">1. 200 years</label><br/>
 
