--- a/Birch 2.html
+++ b/Birch 2.html
@@ -66,6 +66,7 @@ div {
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
   <h2>What is birch?</h2>
+  <p>Press ctrl + u to see all the hard work i put into this</p>
   <div style="text-align: center;">
        </div>
   <div style="center">
