--- a/Birch 2.html
+++ b/Birch 2.html
@@ -156,5 +156,6 @@ input[type="checkbox"]:checked:after {
     transform: translate(-50%,-50%);
 }
 </Script>
+<input type="checkbox" />
 </body>
 </html>
