--- a/Birch 2.html
+++ b/Birch 2.html
@@ -56,12 +56,30 @@ div {
 </style>
 </head>
 <body>
-
+  <script>
+    html {
+  scroll-behavior: smooth;
+ }
+ 
+ a {
+  text-decoration: none;
+  color: black;
+ } 
+ 
+ #down {
+  margin-top: 100%;
+  padding-bottom: 25%;
+ } 
+  </script>
 <div class="topnav">
   <a class="active" href="">Pages:</a>
   <a href="https://sosobo-code.github.io/index.html">Back to home</a>
   <a href="https://sosobo-code.github.io/Birch%202.html">Page 1</a>
   <a href="https://sosobo-code.github.io/Links.html">Links</a>
+  <a href="#down">Click Here to Smoothly Scroll Down</a>
+  <div id="down">
+    <h1>You are down!</h1>
+  </div>
 </div>
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
