--- a/Birch 2.html
+++ b/Birch 2.html
@@ -76,15 +76,15 @@ div {
   <a href="https://sosobo-code.github.io/index.html">Back to home</a>
   <a href="https://sosobo-code.github.io/Birch%202.html">Page 1</a>
   <a href="https://sosobo-code.github.io/Links.html">Links</a>
-  <a href="#down">Click Here to Smoothly Scroll Down</a>
-  <div id="down">
-    <h1>You are down!</h1>
   </div>
 </div>
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
   <h2>What is birch?</h2>
   <p>Press ctrl + u to see all the hard work i put into this</p>
+  <a href="#down">Go to quiz</a>
+  <div id="down">
+  </div>
   <div style="text-align: center;">
        </div>
   <div style="center">
