--- a/Birch 2.html
+++ b/Birch 2.html
@@ -56,34 +56,19 @@ div {
 </style>
 </head>
 <body>
-  <script>
-    html {
-  scroll-behavior: smooth;
- }
- 
- a {
-  text-decoration: none;
-  color: black;
- } 
- 
- #down {
-  margin-top: 100%;
-  padding-bottom: 50%;
- } 
-  </script>
+  
 <div class="topnav">
   <a class="active" href="">Pages:</a>
   <a href="https://sosobo-code.github.io/index.html">Back to home</a>
   <a href="https://sosobo-code.github.io/Birch%202.html">Page 1</a>
   <a href="https://sosobo-code.github.io/Links.html">Links</a>
   </div>
-</div>
+  <div id="bottom"><a href="bottom"></a>Bottom</div>
 <div style="padding-left:16px">
   <h1>Birch By Arrshan</h1>
   <h2>What is birch?</h2>
   <p>Press ctrl + u to see all the hard work i put into this</p>
-  <a href="#down">Go to quiz</a>
-  <div id="down">
+  <a href="#bottom">Go to quiz</a>
   </div>
   <div style="text-align: center;">
        </div>
