--- a/2048.html
+++ b/2048.html
@@ -31,6 +31,9 @@
       background-color: gray;
       color: white;
     }
+    p {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    }
     </style>
 </head>
 <body>
