--- a/Links.html
+++ b/Links.html
@@ -44,6 +44,7 @@ p {
   <a href="https://sosobo-code.github.io/index.html">Back to home</a>
   <a href="https://sosobo-code.github.io/Birch%202.html">Page 1</a>
   <a href="https://sosobo-code.github.io/Links.html">Links</a>
+  <a href="https://sosobo-code.github.io/2048.html">To Quiz</a>
 </div>
 <div style="padding-left:16px">
   <h1>The links</h1>
