--- a/2048.html
+++ b/2048.html
@@ -60,7 +60,7 @@
 </html>
 <html>
   <body>
-   <p class="question">. 2. What makes birch so flammable</p>
+   <p class="question">. 2. how long can birch live</p>
 <ul class="answers">
     
     <input type="radio" name="q2" value="a" id="q2a"><label for="q1a">1. 200 years</label><br/>
@@ -145,6 +145,5 @@ function myFunction() {
   }
 }
 </script>
-<P></P>
 </body>
 </html>
