--- a/2048.html
+++ b/2048.html
@@ -133,6 +133,25 @@
 <input type="radio" name="q5" value="e" id="q5d"><label for="q1d">6. not grow </label><br/>
 </ul>
 </div>
+</html>
+<html>
+  <body>
+    <p class="question">. 6. What is the name of the insect that destroys birch</p>
+<ul class="answers">
+    
+  <input type="radio" name="q5" value="a" id="q5a"><label for="q1a">1. birch killer</label><br/>
+
+<input type="radio" name="q5" value="b" id="q5b"><label for="q1b">2. fly </label><br/>
+
+<input type="radio" name="q5" value="c" id="q5c"><label for="q1c">3. bronze birch borer </label><br/>
+
+<input type="radio" name="q5" value="d" id="q5d"><label for="q1d">4. white birch borer </label><br/>
+
+<input type="radio" name="q5" value="e" id="q5d"><label for="q1d">5. yellowkiller </label><br/>
+
+<input type="radio" name="q5" value="e" id="q5d"><label for="q1d">6. mosquito </label><br/>
+  </body>
+</html>
 <p><button onclick="myFunction()">Click here for answers</button></p>
 
 <div id="myDIV">. . . . .</div>
@@ -141,7 +160,7 @@
 function myFunction() {
   var x = document.getElementById("myDIV");
   if (x.innerHTML === ". . . . .") {
-    x.innerHTML = "The bark, both 30 to 300, reflects the suns rays, 30 to 40 years, ruin land.";
+    x.innerHTML = "1.The bark, 2.both 30 to 300, 3.reflects the suns rays, 4.30 to 40 years, 5.ruin land, 6.Bronze birch borer";
   }
 }
 </script>
