--- a/Birch 2.html
+++ b/Birch 2.html
@@ -137,6 +137,8 @@ width=50px" alt="whitetreethatisbirch">
     <button onclick="window.location.href = 'https://www.missouribotanicalgarden.org/Portals/0/Gardening/Gardening%20Help/images/Pests/Bronze_Birch_Borer2143.jpg';">Click here to get a magnified view of the borer.(I dont think you want to do that, it looks pretty gross.)</button>
 </div>
 <marquee scrollamount="4">It is time to test your knowlage on this topic...</marquee>
+<div class="center">
 <a href="https://sosobo-code.github.io/2048.html">To Quiz</a>
+</div>
 </body>
 </html>
