--- a/2048.html
+++ b/2048.html
@@ -150,6 +150,8 @@
 <input type="radio" name="q5" value="e" id="q5d"><label for="q1d">5. yellowkiller </label><br/>
 
 <input type="radio" name="q5" value="e" id="q5d"><label for="q1d">6. mosquito </label><br/>
+</ul>
+</div>
   </body>
 </html>
 <p><button onclick="myFunction()">Click here for answers</button></p>
