--- a/Birch 2.html
+++ b/Birch 2.html
@@ -138,7 +138,7 @@ width=50px" alt="whitetreethatisbirch">
 </div>
 <marquee scrollamount="4">It is time to test your knowlage on this topic...</marquee>
 <div class="center">
-<a href="https://sosobo-code.github.io/2048.html">To Quiz</a>
+<a href="https://sosobo-code.github.io/2048.html">Click here and you will be transported to the quiz (Do not cheat)</a>
 </div>
 </body>
 </html>
