--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ marquee {
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Games.html">Game</a>
   <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
   <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/Interactions.html">Interactive entertainment</a>
+  <a href="https://sosobo-code.github.io/Interactions.html">Interactive entertainment</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Secret.html">Secret</a>
 </div>
 
