--- a/Interactions.html
+++ b/Interactions.html
@@ -46,7 +46,7 @@ p {
 
 <div class="topnav">
   <a class="active" href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/P.html">Click of one of these guys!</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Arrshans%20homepage.html">Home</a>
+  <a href="https://sosobo-code.github.io/index.html">Home</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Birch 2.html">Assesment document</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Games.html">Game</a>
   <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
