--- a/Birch 2.html
+++ b/Birch 2.html
@@ -79,7 +79,7 @@ div {
 <div class="center">
 <p>Birch is a small to medium sized plant that have very simple leaves.<br/>
   it is known for being good at making things look pretty.<br/>
-  Birch is good for designing because of their paperlike bark and their beautiful natural designs.</p>
+  Birch is good for designing because of their paper like bark and their beautiful natural designs.</p>
 </div>
 <marquee scrollamount="9">Birch tree is a very flammable tree the wood of the tree can catch fire even when its wet! you will find out more about this in this paragraph.</marquee>
 <div class="center">
@@ -137,8 +137,10 @@ width=50px" alt="whitetreethatisbirch">
     and ugly. Please be careful.</p>
     <button onclick="window.location.href = 'https://www.missouribotanicalgarden.org/Portals/0/Gardening/Gardening%20Help/images/Pests/Bronze_Birch_Borer2143.jpg';">Click here to get a magnified view of the borer.(I dont think you want to do that, it looks pretty gross.)</button>
 </div>
-<marquee scrollamount="4">It is time to test your knowlage on this topic...</marquee>
+<marquee scrollamount="4">Now you have learned the basics lets get onto adaptaions</marquee>
 <div class="center">
+  <h2>adaptations</h2>
+  <p>This is a important part of plants that i nearly forgot. </p>
 <a href="https://sosobo-code.github.io/2048.html">Click here and you will be transported to the quiz (Do not cheat)</a>
 </div>
 </body>
