--- a/Birch 2.html
+++ b/Birch 2.html
@@ -89,9 +89,10 @@ div {
     <marquee scrollamount="11">Birch are great trees but they have some downsides.</marquee>
 </div>
 <marquee scrollamount="4">Now you have learned the basics lets get onto adaptaions</marquee>
-<h2>adaptations</h2>
+<h3>adaptations</h3>
+<marquee scrollamount="5">This is a very important part of plants that i nearly forgot!</marquee>
 <div class="center">
-  <p>This is a important part of plants that i nearly forgot. </p>
+  <p>Becuase birch is a winter tree it e</p>
 <a href="https://sosobo-code.github.io/2048.html">Click here and you will be transported to the quiz (Do not cheat)</a>
 </div>
 </body>
