--- a/Birch 2.html
+++ b/Birch 2.html
@@ -89,10 +89,12 @@ div {
     <marquee scrollamount="11">Birch are great trees but they have some downsides.</marquee>
 </div>
 <marquee scrollamount="4">Now you have learned the basics lets get onto adaptaions</marquee>
-<h3>adaptations</h3>
+<h3>The environment of birch and its adaptations</h3>
 <marquee scrollamount="5">This is a very important part of plants that i nearly forgot!</marquee>
 <div class="center">
-  <p>Becuase birch is a winter tree it e</p>
+  <p>Birch is a tree that normally grows around lakes and streams.  It grows in the winter season<br/>
+  and surprisingly easily grows in areas destroyed by wildfires. Birch trees will mostly grow in Europe<br/>
+  and even more in Northern Europe.</p>
 <a href="https://sosobo-code.github.io/2048.html">Click here and you will be transported to the quiz (Do not cheat)</a>
 </div>
 </body>
